# TechniDAQ

./: .env  CLAUDE.md  README.md  architecture.txt  generate_license.cjs  index.html  package-lock.json  package.json  publish-update.bat  publish-update.ps1  tailwind.config.js
.claude/: settings.local.json
src/: App.css  App.tsx  api.ts  constants.ts  theme.ts  types.ts
src-tauri/: .gitignore  2  Cargo.toml  profiles.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppHeader.tsx  AuthLoadingScreen.tsx  BusBar.tsx  ComPortSelector.tsx  DeviceSetupModal.tsx  DeviceTabBar.tsx  DiagTerminal.tsx  ExportDropdown.tsx  LicenseGateway.tsx  LogoutModal.tsx  MetricCard.tsx  ProjectGateway.tsx  Toast.tsx  WaveformChart.tsx
