[package]
name    = "powermeter-demo"
version = "0.1.0"
edition = "2021"

[lib]
name       = "powermeter_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
rusqlite            = { version = "0.31", features = ["bundled"] }
rust_xlsxwriter     = "0.58"
tokio               = { version = "1", features = ["rt", "rt-multi-thread", "time", "io-util"] }
tokio-serial        = "5.4"
tokio-modbus        = { version = "0.7", default-features = false, features = ["rtu"] }

# ── Licensing ──────────────────────────────────────────────────────────────────
# AES-256-GCM decryption (matches Node.js crypto output exactly)
aes-gcm             = "0.10"
# Base64 decoding of the license key token
base64              = "0.21"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true