[package]
name    = "powermeter-demo"
version = "0.1.0"
edition = "2021"

[lib]
name       = "powermeter_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
rusqlite            = { version = "0.31", features = ["bundled"] }
rust_xlsxwriter     = "0.80"
tokio               = { version = "1", features = ["rt", "rt-multi-thread", "time", "io-util", "net"] }
tokio-serial        = "5.4"
tokio-modbus        = { version = "0.7", default-features = false, features = ["rtu", "tcp"] }

# ── Licensing ──────────────────────────────────────────────────────────────────
aes-gcm             = "0.10"
base64              = "0.21"
lettre = { version = "0.11", features = ["smtp-transport", "native-tls", "builder", "tokio1", "tokio1-native-tls"] }

# ── Intranet Web Server ─────────────────────────────────────────────────────────
axum                = { version = "0.7", features = ["macros"] }
tower-http          = { version = "0.5", features = ["cors", "fs"] }
rust-embed          = { version = "8", features = ["mime-guess"] }
mime_guess          = "2"

# ── Enterprise Automation ───────────────────────────────────────────────────────
sha2                = "0.10"
chrono              = { version = "0.4", features = ["clock"] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
